// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> accepts a fill bool 1`] = `
.c0 {
  border: none;
  border-radius: 0;
  display: block;
  padding: var(--size-smaller);
  width: 100%;
}

<input
  className="c0"
  fill={true}
  hidden={false}
/>
`;

exports[`<Input /> accepts a hidden bool 1`] = `
.c0 {
  border: none;
  border-radius: 0;
  display: none;
  padding: var(--size-smaller);
  width: unset;
}

<input
  className="c0"
  fill={false}
  hidden={true}
/>
`;

exports[`<Input /> renders correctly 1`] = `
.c0 {
  border: none;
  border-radius: 0;
  display: inline;
  padding: var(--size-smaller);
  width: unset;
}

<input
  className="c0"
  fill={false}
  hidden={false}
/>
`;
